fix(knp-29): fix observer visible and carousel control buttons visible

--- a/src/pages/IndexPage/FilmsCarouselPreview/FilmsCarouselPreview.module.scss
+++ b/src/pages/IndexPage/FilmsCarouselPreview/FilmsCarouselPreview.module.scss
@@ -13,10 +13,12 @@
     width: 100%;
     aspect-ratio: 136 / 200;
     background-color: var(--secondary-gray-op-30);
+
+    @include centered-flexbox;
 }
 
 .observer {
-    --fade-in-delay: 200ms;
+    --fade-in-delay: 400ms;
     --fade-in-duration: 400ms;
 
     transform: translateY(40px);
